--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,9 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.github.bumptech.glide:glide:4.9.0'
 
+    //notification
+    implementation 'androidx.core:core:1.0.2'
+
     //firebase
     implementation 'com.google.firebase:firebase-core:17.0.1'
 
